adding my files to my repo

--- a/css/style.css
+++ b/css/style.css
@@ -38,9 +38,11 @@ body {
 }
 .tool-p {
   text-align: center;
+  color: white;
 }
 .text-tool {
   text-align: center;
+  color: white;
 }
 
 . #page {
